# Robofly_Analysis_2024

./: .gitignore  README.md  pyproject.toml
images/: robofly_header.xcf
melis_etal_robofly/: __init__.py  body_class.py  lollipop_figure.py  lollipop_figure_ae.py  robofly_analysis.py  robofly_analysis_ae.py  robofly_figures.py  wing_twist_class.py
notebook/: robofly_notebook_ae.ipynb
