[tool.poetry]
name = "melis-etal-robofly"
version = "0.1.0"
description = "Johan Melis's model predictive control simulations"
license = "MIT"
authors = ["Johan Melis <jmelis@caltech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.2"
scipy = "^1.11.4"
matplotlib = "^3.7.1"
vtk = "^9.2.6"
geomdl = "^5.3.1"
h5py = "^3.8.0"
notebook = "^7.0.3"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
